# wazzup

./: .gitignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: App.tsx  api.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/scripts/applescript/: get_arc_url.applescript  get_spotify_track.applescript
apps/desktop/src-tauri/src/: config.rs  context.rs  main.rs
apps/desktop/src/components/: editor-view.tsx  main-window.tsx  playback-controls.tsx  quick-panel.tsx  replay-window.tsx
