[package]
name = "tauri-frontend"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-runtime-wry = "2"
tauri-plugin-shell = "2"
colored = "2.1.0"
command-group = "2.1.0"
libc = "0.2"
dirs = "5.0"
dotenvy = "0.15"

